completed web version + little fix on mobile version

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -80,13 +80,14 @@ body {
   height: 6vh;
   background: #fff;
   position: fixed;
-  bottom: 0;
   padding-top: 1vh;
   padding-bottom: 1vh;
   border-top: solid 0.1vh #eee;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: fixed;
+  bottom: 0;
 }
 .menu_box
 {
@@ -178,7 +179,7 @@ body {
   font-size: 3vw;
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: start;
   flex-wrap: wrap;
 }
 .content_list_column
